assets/templates/Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: $resource_name
  namespace: $namespace
  labels:
    app: $resource_name
spec:
  replicas: $replica
  template:
    metadata:
      labels:
        app: $resource_name
    spec:
      containers:
      - name: $container_name
        image: $image:$tag
        imagePullPolicy: $image_pull_policy
$command
$env_values
        volumeMounts:
$volume_mounts
        resources:
          requests:
            memory: \"${resource_request_memory}\"
            cpu: \"${resource_request_cpu}\"
          limits:
            memory: \"${resource_limit_memory}\"
            cpu: \"${resource_limit_cpu}\"
        ports:
$port_values
$readiness_probe
$liveness_probe
      restartPolicy: $restart_policy
      volumes:
$volumes
