assets/templates/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: $resource_name
  namespace: $namespace
  labels:
    app: $resource_name
spec:
$cluster_ip
  selector:
    app: $resource_name
  type: $expose_type
  ports:
$port_values
