assets/templates/Ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: $resource_name
  namespace: $namespace
  labels:
    app: $resource_name
  annotations:
    kubernetes.io/ingress.class: $ingress_class
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: $host
    http:
      paths:
      - path: $path
        backend:
          serviceName: $resource_name
          servicePort: $service_port
